Name:		tokyodystopia-haskell
Version:	0.0.1
Synopsis:       Haskell binding of Tokyo Dystopia.
Description:    Still in extremely early stage of development. Terribly scratch.
Author:         8c6794b6
Maintainer:     8c6794b6@gmail.com
Cabal-Version:  >= 1.6
build-type:     Simple
license:        BSD3
category:       Sound
stability:      experimental

library
  GHC-Options: -O2 -Wall
  Exposed-Modules:
    Database.TokyoDystopia
    Database.TokyoDystopia.Class
    Database.TokyoDystopia.FFI
    Database.TokyoDystopia.FFI.IDB
    Database.TokyoDystopia.FFI.JDB
    Database.TokyoDystopia.FFI.QDB
    Database.TokyoDystopia.FFI.WDB
    Database.TokyoDystopia.JDB
    Database.TokyoDystopia.IDB
    Database.TokyoDystopia.QDB
    Database.TokyoDystopia.WDB
    Database.TokyoDystopia.Utils
    Database.TokyoDystopia.Types
  Other-Modules:
    Database.TokyoDystopia.Internal
  Extensions: 
    ForeignFunctionInterface,
    EmptyDataDecls,
    GeneralizedNewtypeDeriving,
    PackageImports,
    FunctionalDependencies,
    MultiParamTypeClasses,
    TypeSynonymInstances,
    UndecidableInstances
  Extra-libraries: 
    tokyodystopia
  Extra-lib-dirs:
    /usr/local/lib
  Include-dirs:
    /usr/local/include
  Build-depends:
    base == 4.*,
    bytestring -any,
    filepath,
    random,
    monads-fd -any,
    tokyocabinet-haskell -any
