Name:                study-for-a-pile-of-oscillators
Version:             0.0.1
Synopsis:            Study for a pile of oscillators.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              8c6794b6
Maintainer:          8c6794b6@gmail.com
Category:            Sound
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.2

Executable sfapoo
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -O2
    -fvia-c
    -threaded
  hs-source-dirs:
    src
  main-is:
    run/main.hs
  build-depends:
    cmdargs >= 0.6.4

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -O2
  hs-source-dirs:
    src
  exposed-modules:
    Sound.Study.ForAPileOfOscillators.A001
    Sound.Study.ForAPileOfOscillators.A002
    Sound.Study.ForAPileOfOscillators.A003
    Sound.Study.ForAPileOfOscillators.A004
    Sound.Study.ForAPileOfOscillators.A005
    Sound.Study.ForAPileOfOscillators.A006
    Sound.Study.ForAPileOfOscillators.A007
    Sound.Study.ForAPileOfOscillators.Common
    Sound.Study.ForAPileOfOscillators.Looper
  build-depends:
    base >= 2.0 && < 5.0,
    array,
    bytestring >= 0.9.1.7,
    containers >= 0.3,
    filepath,
    random >= 1.0.0.2,
    deepseq >= 1.1.0.2,
    parallel >= 3.1.0.1,
    hosc -any,
    hsc3 -any,
    hsc3-lepton >= 0.0.2,
    hsc3-lepton-gui >= 0.0.2,
    stream-fusion >= 0.1.2.2,
    mtl,
    netpbm-parser
