name:		SynthDB
version:	0.0.1
synopsis:       Synthdef database
author:         8c6794b6
maintainer:     8c6794b6@gmail.com
cabal-version:  >= 1.9.2
build-type:     Simple
license:        BSD3
category:       Sound
stability:      experimental
license-file:   LICENSE
description:

flag debug
  description:
    Enable debugging
  default:
    False

executable synthdb
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts
  if flag(debug)
    ghc-options: -auto-all
  main-is:
    synthdb.hs
  build-depends:
    acid-state,
    base,
    blaze-html,
    boomerang,
    bytestring,
    containers,
    cmdargs,
    directory,
    filepath,
    happstack-server,
    hsc3,
    hsc3-lepton,
    ixset,
    mtl,
    parallel,
    pandoc,
    safecopy,
    template-haskell,
    web-routes,
    web-routes-boomerang,
    web-routes-happstack

library
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts
  if flag(debug)
    ghc-options: -auto-all
  exposed-modules:
    SynthDB.Persist
    SynthDB.QHereDoc
    SynthDB.Web
  other-modules:
    SynthDB.CLI
  build-depends:
    acid-state,
    base,
    blaze-html,
    boomerang,
    bytestring,
    containers,
    cmdargs,
    directory,
    filepath,
    happstack-server,
    hsc3,
    hsc3-lepton,
    ixset,
    mtl,
    parallel,
    pandoc,
    safecopy,
    template-haskell,
    web-routes,
    web-routes-boomerang,
    web-routes-happstack