name:                selfdep
version:             0.1.0.0
synopsis:            Demo for including itself as test dependency
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
description:
  Minimalistic demo package to show including itself as dependency to
  run tests with @cabal test@.
  .
  This package will compile test executable without recompiling
  library modules.

library
  exposed-modules:
    Self.Dep
    Self.Dep.Foo
    Self.Dep.Bar
  other-modules:
  build-depends:
    base       >= 4.4 && < 5,
    containers >= 0.4 && < 1.0

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
    base       >= 4.4 && < 5,
    QuickCheck >= 2.4 && < 3,
    selfdep

executable foo
  hs-source-dirs: run
  main-is: foo.hs
  build-depends:
    base    >= 4.4 && < 5,
    selfdep -any
